# location-tracking-service

./: .env  .envrc  .gitignore  Cargo.toml  Jenkinsfile  Location Tracking Service Dev.postman_collection.json  LocationTrackingMetrics.json  LocationTrackingService.postman_collection.json  QUEUE_POSITION_FLUCTUATION_FIX.md  README.md  Rider-Sos-LTS.hoppscotch_collection.json  change.txt  db_models.rs  diesel.toml  docker-compose.yml  dump.rdb  flake.nix  justfile  result  rustfmt.toml
.direnv/: flake-profile  flake-profile-10-link  flake-profile-11-link  flake-profile-12-link  flake-profile-14-link  flake-profile-16-link  flake-profile-17-link  flake-profile-19-link  flake-profile-21-link  flake-profile-4-link  flake-profile-40-link  flake-profile-41-link  flake-profile-44-link  flake-profile-5-link  flake-profile-51-link  flake-profile-58-link  flake-profile-59-link  flake-profile-6-link  flake-profile-60-link  flake-profile-62-link  flake-profile-64-link  flake-profile-70-link  flake-profile-71-link  flake-profile-72-link  flake-profile-73-link  flake-profile-74-link  flake-profile-75-link
.github/workflows/: nix.yml
config/: kerala.json
config_sample/: sample.json
configs/: location_tracking_service.dhall
crates/common_utils/: Cargo.toml
crates/load_test/: Cargo.toml  locustfile.py
crates/load_test/generateconfig/: generatetoken.js  package-lock.json  package.json
crates/load_test/generateconfig/output/: driver_token.json  rider_token.json
crates/load_test/src/: lib.rs  main.rs
crates/location_tracking_service/: Cargo.toml
crates/location_tracking_service/src/: drainer.rs  environment.rs  lib.rs  main.rs  middleware.rs  special_location.rs
crates/location_tracking_service/src/common/: cac.rs  detection.rs  errors.rs  geo_polygon.rs  geojson_rtree.rs  heap_size.rs  kafka.rs  mod.rs  redis.rs  route.rs  sliding_window_rate_limiter.rs  stop_detection.rs  types.rs  utils.rs
crates/location_tracking_service/src/common/detection/: mod.rs  overspeeding.rs  route_deviation.rs  stop.rs
crates/location_tracking_service/src/common/flow/: mod.rs  overspeeding.rs  safety_check.rs
crates/location_tracking_service/src/domain/: mod.rs
crates/location_tracking_service/src/domain/action/: mod.rs
crates/location_tracking_service/src/domain/action/internal/: driver.rs  location.rs  mod.rs  ride.rs  transit_proximity.rs
crates/location_tracking_service/src/domain/action/ui/: location.rs  mod.rs
crates/location_tracking_service/src/domain/api/: mod.rs
crates/location_tracking_service/src/domain/api/internal/: driver.rs  location.rs  mod.rs  ride.rs  transit_proximity.rs
crates/location_tracking_service/src/domain/api/ui/: healthcheck.rs  location.rs  mod.rs
crates/location_tracking_service/src/domain/types/: mod.rs
crates/location_tracking_service/src/domain/types/internal/: driver.rs  location.rs  mod.rs  ride.rs  transit_proximity.rs
crates/location_tracking_service/src/domain/types/ui/: location.rs
crates/location_tracking_service/src/kafka/: mod.rs  producers.rs  types.rs
crates/location_tracking_service/src/outbound/: external.rs  mod.rs  provider.rs  types.rs
crates/location_tracking_service/src/redis/: binary.rs  commands.rs  health.rs  keys.rs  mod.rs  types.rs
crates/location_tracking_service/src/tools/: callapi.rs  error.rs  logger.rs  mod.rs  prometheus.rs
crates/macros/: Cargo.toml
crates/main/: Cargo.toml
crates/main/src/: connection.rs  env.rs  lib.rs  main.rs
crates/notification_service/: Cargo.toml  build.rs
crates/notification_service/protos/: notification_service.proto
crates/notification_service/src/: environment.rs  lib.rs  main.rs  reader.rs
crates/notification_service/src/common/: mod.rs  types.rs  utils.rs
crates/notification_service/src/redis/: keys.rs  mod.rs
crates/notification_service/src/tools/: error.rs  mod.rs  prometheus.rs
crates/redis_interface/: Cargo.toml
crates/redis_interface/src/: commands.rs  errors.rs  lib.rs  types.rs
crates/router_env/: Cargo.toml
crates/router_env/src/: lib.rs
crates/router_env/src/logger/: mod.rs
crates/router_svc/: Cargo.toml
crates/router_svc/src/: actors.rs  db_models.rs  db_utils.rs  env.rs  lib.rs  main.rs  messages.rs  schema.rs  types.rs
crates/router_svc/src/tracking/: geo_polygon.rs  karnataka.rs  kerala.rs  mod.rs  models.rs  services.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  mod.rs
crates/shared/src/redis/: commands.rs  error.rs  mod.rs  types.rs
crates/shared/src/redis/client/: commands.rs  mod.rs  types.rs
crates/shared/src/redis/interface/: commands.rs  mod.rs  types.rs
crates/shared/src/tools/: error.rs  mod.rs
crates/shared/src/utils/: callapi.rs  logger.rs  mod.rs  prometheus.rs
crates/shared/src/utils/logger/: layer.rs  mod.rs
crates/tests/: Cargo.toml
crates/tests/src/: integration_tests.rs  lib.rs  location_tracking_service.rs  notification_service.rs  stop_detection.rs
dhall_config/: location_tracking_service.dhall
dhall_configs/: api_server.dhall
geo_config/: delhi.json  hyderabad.json  karnataka.json  kerala.json  kolkata.json  netherlands.json
geo_json_config/: S66-U.geojson
nix/: docker.nix  pre-commit.nix  rust.nix  services.nix
route_geo_json_config/: AC1-D.geojson  AC1-D.json  AC1-U.geojson  AC12-D.geojson  AC12-U.geojson  AC12D-D.geojson  AC12D-U.geojson  AC14-D.geojson  AC14-U.geojson  AC2-D.geojson  AC2-U.geojson  AC20-D.geojson  AC20-U.geojson  AC23A-D.geojson  AC23A-U.geojson  AC24AL-D.geojson  AC24AL-U.geojson  AC24L-D.geojson  AC24L-U.geojson  AC30-D.geojson  AC30-U.geojson  AC30S-D.geojson  AC30S-U.geojson  AC31-D.geojson  AC31-U.geojson  AC37A-D.geojson  AC37A-U.geojson  AC37L-D.geojson  AC37L-U.geojson  AC38-D.geojson  AC38-U.geojson  AC39-D.geojson  AC39-U.geojson  AC4-D.geojson  AC4-U.geojson  AC40-D.geojson  AC40-U.geojson  AC43L-D.geojson  AC43L-U.geojson  AC47-D.geojson  (+44 more)
scripts/: geojson-to-dhall.js  location-tracking-service-bus-depot-geojson.yaml
src/: connection.rs  hashing.rs  lib.rs  lists.rs  lonlat.rs  main.rs  update.rs  updater.rs
(+15 files in other folders)
