#! ./.Cargo.toml

[package]
name = "location-tracking-service"
version = "0.1.0"
edition = "2021"

[lib]
path = "crates/main/src/lib.rs"

[[bin]]
path = "crates/main/src/main.rs"
name = "location-tracking-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread"]}
dotenv = "0.15.0"
redis = "0.23.0"
cargo-test = "0.3.1"
actix-web = "4.3.1"
redis_interface = { version = "0.1.0", path = "./crates/redis_interface" }
router_svc = { version = "0.1.0", path = "./crates/router_svc" }
main = {version = "0.1.0", path = "./crates/main"}
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.26"
actix = "0.13.0"
