[package]
name = "load_test"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "load_test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread"]}
dotenv = "0.15.0"
redis = {version = "0.23.0"}
cargo-test = "0.3.1"
actix-web = "4.3.1"
reqwest = {version = "0.11.18", features = ["json"]}
serde = {version ="1.0.171", features = ["derive"]}
fred = { version = "6.0.0", features = ["metrics", "partial-tracing"] }
serde_json = "1.0.100"
rand = "0.8.5"
chrono = {version = "0.4.26", features = ["serde"]}