[package]
name = "location_tracking_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "location_tracking_service"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
serde_dhall = "0.12.1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.14"
tokio = "1.29.1"
fred = { version = "6.0.0", features = ["metrics", "partial-tracing"] }
reqwest = {version = "0.11.18", features = ["json"]}
futures = "0.3.28"
rand = "0.8.5"
actix = "0.13.0"
geo = "0.25.1"
geojson = "0.24.1"
strum = "0.24.0"
strum_macros = "0.24.0"
enum-iterator = "1.4.0"
rdkafka = "0.26"

shared = { version = "0.1.0", path = "../shared" }