[package]
name = "location_tracking_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "location_tracking_service"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
once_cell = "1.17.1"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
serde_dhall = "0.12.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.14"
tokio = "1.29.1"
fred = { version = "6.0.0", features = ["metrics", "partial-tracing"] }
reqwest = {version = "0.11.18", features = ["json"]}
futures = "0.3.28"
rand = "0.8.5"
actix = "0.13.0"
geo = "0.25.1"
geojson = "0.24.1"
strum = "0.24.0"
strum_macros = "0.24.1"
enum-iterator = "1.4.0"
rdkafka = {version = "0.33.2", features = ["cmake-build"] }
tracing-actix-web = "0.7.5"
tracing = "0.1.37"
uuid = "1.4.1"
rustc-hash = "1.1.0"

shared = { version = "0.1.0", path = "../shared" }
macros = { version = "0.1.0", path = "../macros" }

[dev-dependencies]
pprof = { version = "0.12", features = ["flamegraph"] }
