[package]
name = "location_tracking_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "location-tracking-service"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
actix-http = "3.4.0"
once_cell = "1.17.1"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
serde_dhall = "0.12.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.14"
tokio = "1.29.1"
fred = { version = "6.0.0", features = ["metrics", "partial-tracing"] }
reqwest = {version = "0.11.18", features = ["json"]}
futures = "0.3.28"
rand = "0.8.5"
actix = "0.13.0"
geo = "0.25.1"
geojson = "0.24.1"
strum = "0.24.0"
strum_macros = "0.24.1"
enum-iterator = "1.4.0"
rdkafka = {version = "0.33.2", features = ["cmake-build"] }
thiserror = "1.0.39"
tracing-actix-web = "0.7.5"
tracing = "0.1.37"
uuid = "1.4.1"
rustc-hash = "1.1.0"
actix-web-prom = "0.7.0"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry", "json"] }
prometheus = { version = "0.13.3", features = ["process"] }

shared = { git = "https://github.com/nammayatri/shared-kernel-rs", branch = "main" }
macros = { git = "https://github.com/nammayatri/shared-kernel-rs", branch = "main" }
cac_client = { git = "https://github.com/khuzema786/context-aware-config.git", rev = "7dceb4c" }
superposition_client = { git = "https://github.com/khuzema786/context-aware-config.git", rev = "7dceb4c" }

[dev-dependencies]
pprof = { version = "0.12", features = ["flamegraph"] }
