#! ./.Cargo.toml

[package]
name = "main"
version = "0.1.0"
edition = "2021"

#[lib]
#path = "src/lib.rs"

#[[bin]]
#path = "src/main.rs"
#name = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.23.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_dhall = "0.12.1"

redis_interface = { version = "0.1.0", path = "../redis_interface" }
router_svc = { version = "0.1.0", path = "../router_svc" }