[package]
name = "router_env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.37" }
tracing-actix-web = { version = "0.7.5", features = ["opentelemetry_0_19"], optional = true }
tracing-appender = { version = "0.2.2" }
tracing-attributes = "0.1.26"
tracing-opentelemetry = { version = "0.19.0" }
tracing-subscriber = { version = "0.3.17", default-features = true, features = ["env-filter", "json", "registry"] }
vergen = { version = "8.2.1", optional = true, features = ["cargo", "git", "git2", "rustc"] }
bb8 = "0.8"