[package]
name = "router_svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "router"
path = "src/router.rs"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
chrono = { version = "0.4", features = ["serde"] }
redis_interface = { version = "0.1.0", path = "../redis_interface" }
