[package]
name = "router_svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "router_svc"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
serde_dhall = "0.12.1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.14"
tokio = "1.29.1"
fred = { version = "6.0.0", features = ["metrics", "partial-tracing"] }
reqwest = {version = "0.11.18", features = ["json"]}
futures = "0.3.28"
redis = "0.23.0"
rand = "0.8.5"
actix = "0.13.0"
geo = "0.25.1"
geojson = "0.24.1"

redis_interface = { version = "0.1.0", path = "../redis_interface" }