[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.17.1"
actix-web = "4.3.1"
serde_json = "1.0.100"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry", "json"] }
async-trait = "0.1.66"
error-stack = "0.3.1"
futures = "0.3"
prometheus = { version = "0.13.3", features = ["process"] }
serde = { version = "1.0.155", features = ["derive"] }
thiserror = "1.0.39"
fred = { version = "6.0.0", features = ["metrics", "partial-tracing"] }
reqwest = {version = "0.11.18", features = ["json"]}
tokio = "1.28.2"
strum_macros = "0.24.0"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
rustc-hash = "1.1.0"

macros = { version = "0.1.0", path = "../macros" }
