[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.28.2"
futures = "0.3"
anyhow = "1.0.75"
serde_dhall = "0.12.1"
tokio-stream = "0.1"
serde_json = "1.0.100"
tonic = "0.10.2"
rand = "0.8.5"

shared = { git = "https://github.com/nammayatri/shared-kernel-rs", rev = "f58fabc" }
location_tracking_service = { version = "0.1.0", path = "../location_tracking_service" }