[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.28.2"
futures = "0.3"
anyhow = "1.0.75"
serde = { version = "1.0.167", features = ["derive"] }
serde_dhall = "0.12.1"
tokio-stream = "0.1"
serde_json = "1.0.100"
chrono = { version = "0.4", features = ["serde"] }
tonic = "0.10.2"
strum = "0.24.0"
strum_macros = "0.24.1"
rand = "0.8.5"
reqwest = {version = "0.11.18", features = ["json"]}
arc-swap = "1.6.0"

shared = { git = "https://github.com/nammayatri/shared-kernel-rs", rev = "809fe45" }
location_tracking_service = { version = "0.1.0", path = "../location_tracking_service" }